<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalcularAutonomia">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_baseline_close_24"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_close"        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"
        android:text="@string/activity_calcular_autonomia"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/txt_title_dimen"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_valor_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_title_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/edt_preco_kwh_hint"
        android:layout_margin="@dimen/margin"
        android:inputType="numberDecimal"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_km_percorrido_hint"
        app:layout_constraintTop_toBottomOf="@id/edt_valor_kwh"
        android:layout_margin="@dimen/margin"
        android:inputType="numberDecimal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_autonomia"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_calcular_txt"/>

    <TextView
        android:id="@+id/txt_resultado_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/txt_resultado_anterior_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_resultado_id"
        app:layout_constraintStart_toStartOf="@id/txt_resultado_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>