<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardCornerRadius="@dimen/margin"
        android:elevation="@dimen/margin"
        android:padding="@dimen/margin"
        app:cardBackgroundColor="@color/background_card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.43" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_car_id"
                android:layout_width="@dimen/img_width_size"
                android:layout_height="@dimen/img_height_size"
                android:layout_marginTop="@dimen/margin_top_subtitle"
                android:src="@drawable/car"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/star_fav_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"
                android:layout_margin="@dimen/margin"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_preco_id"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/preco"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline1_id"
                app:layout_constraintTop_toBottomOf="@id/img_car_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_bateria_id"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/bateria"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline1_id"
                app:layout_constraintTop_toBottomOf="@id/txt_preco_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_potencia_id"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/potencia"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline1_id"
                app:layout_constraintTop_toBottomOf="@id/txt_bateria_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_recarga_id"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/recarga"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline1_id"
                app:layout_constraintTop_toBottomOf="@id/txt_potencia_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_valor_preco_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$: 120.000,00"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline2_id"
                app:layout_constraintTop_toTopOf="@id/txt_preco_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bateria_valor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="93,4 KwH"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline2_id"
                app:layout_constraintTop_toTopOf="@id/txt_bateria_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/potencia_valor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="630cv"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline2_id"
                app:layout_constraintTop_toTopOf="@id/txt_potencia_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recarga_valor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23 min"
                android:textSize="@dimen/txt_details"
                app:layout_constraintStart_toStartOf="@id/guideline2_id"
                app:layout_constraintTop_toTopOf="@id/txt_recarga_id"
                android:layout_marginBottom="@dimen/margin"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>